--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0"
+		"react-native": "0.44.0",
+		"react-native-secure-key-store": "../../react-native-secure-key-store"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
