--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0",
+		"react": "16.3.0-alpha.1",
+		"react-intl": "^2.4.0",
+		"react-native": "^0.55.4",
 		"react-native-secure-key-store": "../../react-native-secure-key-store"
 	},
 	"devDependencies": {
