--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,24 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 22
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -27,10 +28,11 @@ android {
 }
 
 repositories {
+    google()
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
 }
-  
