--- a/wercker.yml
+++ b/wercker.yml
@@ -6,6 +6,11 @@ box:
 build:
   steps:
     - script:
+        name: Version Bump
+        code: |
+          npm version patch
+
+    - script:
         name: publish
         code: |
           echo "//<npm-registry>:8080/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
