--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.5",
   "description": "React Native Library for securely storing keys to iOS and Android devices in KeyChain and KeyStore respectively.",
   "main": "index.js",
+  "publishConfig": { 
+    "registry": "https://npm.pkg.github.com/" 
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
