--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Native Library for securely storing keys to iOS and Android devices in KeyChain and KeyStore respectively.",
   "main": "index.js",
   "publishConfig": { 
-    "registry": "https://npm.pkg.github.com/" 
+    "registry": "https://registry.npmjs.org" 
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
