fix(example): fix metro bundling issues with metro.config.js in example app

--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.1",
-    "react-native-secure-key-store": "../../react-native-secure-key-store"
+    "react-native-secure-key-store": "file:.."
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
